[package]
name = "mntctl"
version = "0.5.1"
edition = "2021"
description = "Modular remote & encrypted mount manager with systemd integration"
license = "Apache-2.0"
authors = ["sfoerster"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
comfy-table = { version = "7", features = ["custom_styling"] }
owo-colors = { version = "4", features = ["supports-colors"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6"
which = "7"
rpassword = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
